force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/Apttus_Config2__RelatedLineItem__c.object-meta.xml
<CustomObject>
    <description>Holds the relationships between line items</description>
    <label>Related Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>