force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__IsSystemCalculated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsSystemCalculated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the weightage is calculated by the system. System calculated weightage may be overridden by the user.</description>
    <inlineHelpText>Indicates whether the weightage is calculated by the system. System calculated weightage may be overridden by the user.</inlineHelpText>
    <label>Is System Calculated</label>
    <type>Checkbox</type>
</CustomField>