force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__PriceMatrixEntryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceMatrixEntryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated price matrix entry</description>
    <inlineHelpText>ID of the associated price matrix entry</inlineHelpText>
    <label>Price Matrix Entry</label>
    <referenceTo>Apttus_Config2__PriceMatrixEntry__c</referenceTo>
    <relationshipLabel>Related Line Items</relationshipLabel>
    <relationshipName>RelatedLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>