force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__PriceMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated price matrix</description>
    <inlineHelpText>ID of the associated price matrix</inlineHelpText>
    <label>Price Matrix</label>
    <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
    <relationshipLabel>Related Line Items</relationshipLabel>
    <relationshipName>RelatedLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>