force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__RelatedAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedAdjustmentAmount__c</fullName>
    <description>The related price adjustment amount.</description>
    <inlineHelpText>The related price adjustment amount.</inlineHelpText>
    <label>Related Adjustment Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>