force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__RelatedAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedAdjustmentType__c</fullName>
    <description>The related price adjustment type</description>
    <inlineHelpText>The related price adjustment type</inlineHelpText>
    <label>Related Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% Discount</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>% Markup</fullName>
            </value>
            <value>
                <fullName>Markup Amount</fullName>
            </value>
            <value>
                <fullName>Price Override</fullName>
            </value>
            <value>
                <fullName>Price Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>