force-app/main/default/objects/Apttus_Config2__RelatedLineItem__c/fields/Apttus_Config2__RelationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationType__c</fullName>
    <description>The relation type</description>
    <inlineHelpText>The relation type</inlineHelpText>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>